fix navbar collapse toggle

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -20,15 +20,13 @@
 .nav-link:hover {
   background-color: var(--white);
   border-color: var(--white);
-}
-
-.nav-link:active {
-  background-color: var(--orange);
-  border-color: var(--orange);
+  color: var(--black);
 }
 
 .nav-link:focus {
-  border-color: var(--orange);
+  background-color: var(--cyan);
+  border-color: var(--cyan);
+  color: var(--black);
 }
 
 .navbar-brand {
